[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/dockable_container/layout_split.gd" type="Script" id=1]
[ext_resource path="res://src/WorkSpace/ClustersTree/ClustersTree.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/dockable_container/layout.gd" type="Script" id=3]
[ext_resource path="res://addons/dockable_container/dockable_container.gd" type="Script" id=4]
[ext_resource path="res://addons/dockable_container/layout_panel.gd" type="Script" id=5]
[ext_resource path="res://src/WorkSpace/WorkSpace.gd" type="Script" id=6]
[ext_resource path="res://src/WorkSpace/ClusterTree.gd" type="Script" id=7]

[sub_resource type="Resource" id=1]
resource_name = "Tabs"
script = ExtResource( 5 )
names = PoolStringArray( "ClusterTree" )
current_tab = 0

[sub_resource type="Resource" id=2]
resource_name = "Tabs"
script = ExtResource( 5 )
names = PoolStringArray( "GraphEdit", "Welcome", "test", "TextEdit" )
current_tab = 0

[sub_resource type="Resource" id=3]
resource_name = "Tabs"
script = ExtResource( 5 )
names = PoolStringArray( "HBoxContainer" )
current_tab = 0

[sub_resource type="Resource" id=4]
resource_name = "Split"
script = ExtResource( 1 )
direction = 1
percent = 0.878906
first = SubResource( 2 )
second = SubResource( 3 )

[sub_resource type="Resource" id=5]
resource_name = "Tabs"
script = ExtResource( 5 )
names = PoolStringArray( "Tree2" )
current_tab = 0

[sub_resource type="Resource" id=6]
resource_name = "Split"
script = ExtResource( 1 )
direction = 0
percent = 0.872495
first = SubResource( 4 )
second = SubResource( 5 )

[sub_resource type="Resource" id=7]
resource_name = "Split"
script = ExtResource( 1 )
direction = 0
percent = 0.164653
first = SubResource( 1 )
second = SubResource( 6 )

[sub_resource type="Resource" id=8]
resource_name = "Layout"
script = ExtResource( 3 )
root = SubResource( 7 )
hidden_tabs = {
}

[node name="WorkSpace" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="DockableContainer" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
tab_align = 0
layout = SubResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="DockableContainer"]
margin_left = 178.605
margin_top = 565.344
margin_right = 905.698
margin_bottom = 596.0
size_flags_vertical = 3

[node name="Tree2" parent="DockableContainer" instance=ExtResource( 2 )]
margin_left = 925.698
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = null

[node name="GraphEdit" type="GraphEdit" parent="DockableContainer"]
margin_left = 178.605
margin_top = 32.0
margin_right = 905.698
margin_bottom = 517.344
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_offset = Vector2( -0.000793457, -0.000366211 )

[node name="Welcome" type="RichTextLabel" parent="DockableContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 174.605
margin_right = -849.395
margin_bottom = -600.0
bbcode_enabled = true
bbcode_text = "[indent]
[b]Client for tuo[/b]
	This is the client for tuo, based on Godot.
	More info click [url=http://www.zjmpage.site]here[/url]
[/indent]

"
text = "	
Client for tuo
	This is the client for tuo, based on Godot.
	More info click here


"

[node name="test" type="RichTextLabel" parent="DockableContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 174.605
margin_right = -849.395
margin_bottom = -600.0
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2]wave[/wave]
[tornado radius=5 freq=2]tornado[/tornado]
[shake rate=5 level=10]shake[/shake]
[fade start=1 length=14]fade adfdsafsadfsdfsadfasdfsdf[/fade]
[rainbow freq=0.2 sat=10 val=20]rainbow[/rainbow]"
text = "wave
tornado
shake
fade adfdsafsadfsdfsadfasdfsdf
rainbow"

[node name="TextEdit" type="TextEdit" parent="DockableContainer"]
visible = false
margin_left = 174.605
margin_right = 174.605
text = "func _ready():
	# Replace OK since preference changes are being applied immediately, not after OK confirmation
	get_ok().text = tr(\"Close\")
	
	tree.set_hide_root(true)
	var tree_root = tree.create_item()
	var GUI = tree.create_item(tree_root)
	GUI.set_text(0, \"GUI\")
	var theme = tree.create_item(GUI)
	theme.set_text(0, \"Theme\")

	var language = tree.create_item(tree_root)
	language.set_text(0, \"Language\")"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
bookmark_gutter = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
wrap_enabled = true
minimap_draw = true
caret_block_mode = true
caret_blink = true
caret_moving_by_right_click = false

[node name="ClusterTree" type="VBoxContainer" parent="DockableContainer"]
margin_left = 4.0
margin_top = 32.0
margin_right = 158.605
margin_bottom = 596.0
script = ExtResource( 7 )

[node name="SearchBar" type="LineEdit" parent="DockableContainer/ClusterTree"]
margin_right = 154.0
margin_bottom = 24.0
clear_button_enabled = true
placeholder_text = "Search"

[node name="Tree" parent="DockableContainer/ClusterTree" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 154.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_rmb_select = true
script = null

[node name="PopupMenu" type="PopupMenu" parent="DockableContainer/ClusterTree"]
margin_right = 20.0
margin_bottom = 20.0

[connection signal="text_changed" from="DockableContainer/ClusterTree/SearchBar" to="DockableContainer/ClusterTree" method="_on_SearchBar_text_changed"]
[connection signal="item_rmb_edited" from="DockableContainer/ClusterTree/Tree" to="DockableContainer/ClusterTree" method="_on_Tree_item_rmb_edited"]
[connection signal="item_rmb_selected" from="DockableContainer/ClusterTree/Tree" to="DockableContainer/ClusterTree" method="_on_Tree_item_rmb_selected"]
[connection signal="about_to_show" from="DockableContainer/ClusterTree/PopupMenu" to="DockableContainer/ClusterTree" method="_on_PopupMenu_about_to_show"]
[connection signal="index_pressed" from="DockableContainer/ClusterTree/PopupMenu" to="DockableContainer/ClusterTree" method="_on_PopupMenu_index_pressed"]
